content overflow fix

--- a/src/assets/css/default.css
+++ b/src/assets/css/default.css
@@ -11,3 +11,11 @@
 .grow {
     flex-grow: 1;
 }
+
+.content {
+    overflow-y: auto;
+}
+
+.row {
+    margin: 0 !important;
+}
